syntax = "proto3";

package api.v1;
import "google/protobuf/timestamp.proto";

option go_package = "api/v1;api";

service HelloServer{
  rpc SayHello(HelloRequest)returns(HelloResponse){}
}

message HelloRequest{
  string name = 1;
}

message HelloResponse{
  string msg = 1;
  google.protobuf.Timestamp created_at = 2;
}